@@ -8,7 +8,7 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Collections;
+import java.util.List;
 
 @RestController
 @RequestMapping("/apis/v1/fcm")
@@ -19,8 +19,9 @@ public class FcmController {
 
     @PostMapping("/subscribe")
     public ResponseEntity<String> subscribeToken(@RequestBody SubscribeRequest request) {
-        if (request.getToken() != null && !request.getToken().isEmpty() && request.getTopic() != null) {
-            fcmService.subscribeToTopic(Collections.singletonList(request.getToken()), request.getTopic());
+        if (request.getToken() != null && !request.getToken().isEmpty() && request.getTopics() != null) {
+            List<String> tokens = List.of(request.getToken());
+            request.getTopics().forEach(topic -> fcmService.subscribeToTopic(tokens, topic));
         }
         return ResponseEntity.ok("Subscribed");
     }
@@ -28,6 +29,6 @@ public class FcmController {
     @Data
     public static class SubscribeRequest {
         private String token;
-        private String topic;
+        private List<String> topics;
     }
 }
